eks-cluster/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: web-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-app
    spec:
      containers:
      - image: 331881408266.dkr.ecr.ap-southeast-1.amazonaws.com/vasuki-dev-test:latest
        imagePullPolicy: Always
        name: redis-app
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: redis-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-service
              port:
                number: 80
